Changed "Foreign Audio Search" to "Foreign audio scan" and added an option in the Picker to separately include it alongside other selection rules for normal subtitles. Changed audio and subtitle selection mode radio buttons to a more compact drop down. Added tooltip info for all audio and subtitle selection modes.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1670,7 +1670,7 @@
 									HorizontalContentAlignment="Center"
 									VerticalContentAlignment="Center"
 									IsChecked="{Binding Default}"
-									IsEnabled="{Binding MainViewModel.DefaultSubtitlesEnabled}"
+									IsEnabled="{Binding DefaultEnabled}"
 									Style="{StaticResource CheckBoxCenteredStyle}"
 									ToolTip="{x:Static res:CommonRes.DefaultSubtitleToolTip}"
 									ToolTipService.ShowOnDisabled="True"
