--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -705,7 +705,7 @@
 							Visibility="{Binding ProcessingService.Encoding,
 							                     Converter={StaticResource VisibilityConverter}}" />
 					</fluent:RibbonGroupBox>
-					<fluent:RibbonGroupBox x:Name="toolsRibbonGroupBox" Header="{x:Static res:MainRes.ToolsMenu}">
+					<fluent:RibbonGroupBox x:Name="toolsRibbonGroupBox">
 						<fluent:DropDownButton
 							x:Name="windowsRibbonButton"
 							Header="{x:Static res:MainRes.WindowsMenu}"
@@ -752,6 +752,13 @@
 								Header="{x:Static res:MainRes.AboutVidCoderMenuItem}"
 								Icon="/Icons/VidCoder32.png" />
 						</fluent:DropDownButton>
+						<fluent:Button
+							AutomationProperties.Name="{x:Static res:MainRes.AppxGetUpdateButton}"
+							Command="{Binding OpenAppxUpdateWarningDialog}"
+							Header="{x:Static res:MainRes.AppxGetUpdateButton}"
+							LargeIcon="/Icons/warning.png"
+							Visibility="{Binding ShowAppxUpdateWarning,
+							                     Converter={StaticResource VisibilityConverter}}" />
 					</fluent:RibbonGroupBox>
 				</fluent:RibbonTabItem>
 			</fluent:Ribbon>
