--- a/VidCoder/View/EncodeDetailsWindow.xaml
+++ b/VidCoder/View/EncodeDetailsWindow.xaml
@@ -25,8 +25,8 @@
 		</Style>
 		<Style x:Key="EncodeDetailsProgress" TargetType="ProgressBar">
 			<Setter Property="Margin" Value="0 0 10 0" />
-			<Setter Property="Foreground" Value="{DynamicResource ProgressBarBrush}" />
 			<Setter Property="Background" Value="{DynamicResource WindowBrush}" />
+			<Setter Property="Foreground" Value="{Binding ProcessingService.ProgressBarBrush}" />
 		</Style>
 	</Window.Resources>
 	<Border Style="{StaticResource WindowMainPanelStyle}">
